--- a/style.css
+++ b/style.css
@@ -13,3 +13,29 @@ body {
     font-family: verdana;
     font-size: 20px;
   }
+div { padding: 1rem;
+  bbackground-color: rgb(64, 195, 228);
+  border: 4px solid rgb(189, 185, 185);}
+
+
+a:link {
+  color: red;
+}
+
+a:visited {
+  color: green;
+}
+a:hover {
+  color: hotpink;
+}
+
+a:active {
+  color: rgb(188, 199, 43);
+}
+
+body > h1 {font-size: 2em;
+opacity: .4;}
+
+div + p {
+  background-color: rgb(76, 216, 76);
+}
