--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
 body {
-    background-color: rgb(64, 195, 228);
+    background-color: rgb(10, 114, 24);
   }
   
   .pizzaphoto{height: 25%; width: 25%;}
 
   h1 {
-    color: white;
+    color: rgb(167, 245, 131);
     text-align: center;
   }
   
