--- a/style.css
+++ b/style.css
@@ -17,6 +17,10 @@ div { padding: 1rem;
   bbackground-color: rgb(64, 195, 228);
   border: 4px solid rgb(189, 185, 185);}
 
+.grid-container 
+
+
+
 
 a:link {
   color: red;
