--- a/style.css
+++ b/style.css
@@ -1,33 +1,55 @@
-body {
-    background-color: rgb(10, 114, 24);
-  }
-  
-  .pizzaphoto{height: 25%; width: 25%;}
+*{
+  margin: 0; 
+  padding: 0;
+}
+body {background-color: seagreen;}
 
-  h1 {
-    color: rgb(167, 245, 131);
-    text-align: center;
-  }
+div {border-color: black;
+  border-style: dotted;}
   
-  p {
+
+/* p {
     font-family: verdana;
     font-size: 20px;
-  }
-div { padding: 1rem;
-  bbackground-color: rgb(64, 195, 228);
-  border: 4px solid rgb(189, 185, 185);}
+  } */
 
-.grid-container 
+#grid-container {
+  display: grid;
+}
+
+#header { display:  grid;
+grid-template-columns: 2fr 5fr 1fr 1fr 1fr;
+min-height: 5vh;
+justify-items: center;
+align-items: center;
+}
+
+#content {display: grid;
+grid-template-columns: 1fr 1fr;
+min-height: 80vh;
+justify-items: center;
+align-items: center;
+}
+
+#footer { display:  grid;
+  grid-template-columns: repeat(3,1fr);
+  min-height: 10vh;
+  justify-items: center;
+  align-items: center;}
 
 
 
+.pizzaphoto{
+  height: 75%; 
+  width: 75%;
+}
 
 a:link {
   color: red;
 }
 
 a:visited {
-  color: green;
+  color: purple
 }
 a:hover {
   color: hotpink;
@@ -37,9 +59,13 @@ a:active {
   color: rgb(188, 199, 43);
 }
 
-body > h1 {font-size: 2em;
-opacity: .4;}
-
-div + p {
-  background-color: rgb(76, 216, 76);
+h2 {font-size: 34;
+color: red;
 }
+
+/* body > h1 {font-size: 2em;
+opacity: .4;} */
+
+/* div + p {
+  background-color: rgb(76, 216, 76);
+} */
