--- a/final-okotoks/with-sidebar/Okotoks Pizza new/style/menu.css
+++ b/final-okotoks/with-sidebar/Okotoks Pizza new/style/menu.css
@@ -16,3 +16,15 @@
 .menu_items {
     width: 80%;
 }
+
+
+@media only screen and (min-width: 768px) {
+    .grid-wrapper {
+        grid-template-rows: 100px 1fr 50px;
+        grid-template-columns: 150px 1fr 150px;
+        grid-template-areas: 
+            'header header header'
+            'sidebar1 content sidebar2'
+            'footer footer footer'
+    }
+}
