--- a/final-okotoks/with-sidebar/Okotoks Pizza new/style/menu.css
+++ b/final-okotoks/with-sidebar/Okotoks Pizza new/style/menu.css
@@ -15,6 +15,28 @@
 
 .menu_items {
     width: 80%;
+    width: 350px;
+    height: 350px;
+    border-radius: 100px;
+    overflow: hidden;
+    background-position: center;
+    background-size: cover;
+    border-radius: 2000px;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 5px;
+    border: none;
+    padding: 5px 7px;
+    border-radius: 100px;
+    background: rgb(96, 209, 156);
+    color: #fff;
+    font-size: 20px;
+    margin-top: 2px;
+    
+
+
 }
 
 
